--- a/styles/components/_search-result.scss
+++ b/styles/components/_search-result.scss
@@ -66,6 +66,8 @@
         &__btn-cancel {
             &.open {
                 display: block;
+                grid-area: cancel;
+                justify-self: end;
             }
         }
     }
