--- a/styles/components/_logo.scss
+++ b/styles/components/_logo.scss
@@ -4,14 +4,15 @@
   align-items: center;
   cursor: pointer;
   margin-right: 4rem;
-  &.hide {
-    display: none;
-  }
 }
 
 @media screen and (max-width: 1100px) {
   .logo {
     margin-left: 10rem;
+    &.open {
+      // display: none;
+      grid-area: logo;
+    }
   }
 
   .logo__icon {
