--- a/styles/components/_wrapper.scss
+++ b/styles/components/_wrapper.scss
@@ -71,8 +71,8 @@ input {
 @media screen and(max-width:480px) {
   .wrapper {
     #icon {
-      height: 3rem;
-      width: 3rem;
+      // height: 3rem;
+      // width: 3rem;
     }
   }
 }
