--- a/styles/main.css
+++ b/styles/main.css
@@ -208,13 +208,6 @@ input {
   padding-left: 1rem;
 }
 
-@media screen and (max-width: 480px) {
-  .wrapper #icon {
-    height: 3rem;
-    width: 3rem;
-  }
-}
-
 .container {
   max-width: 1500px;
   margin: 0 auto;
@@ -313,6 +306,20 @@ input {
   line-height: 19px;
   color: #5c596a;
   opacity: 0.7;
+}
+
+@media screen and (max-width: 1100px) {
+  .search__icon {
+    top: 23%;
+    left: 1%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .search__icon {
+    top: 37%;
+    left: 4%;
+  }
 }
 
 .burger {
@@ -10168,7 +10175,7 @@ input {
 
 .search-result {
   position: absolute;
-  z-index: 1000;
+  z-index: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
