--- a/styles/components/_menu-modal.scss
+++ b/styles/components/_menu-modal.scss
@@ -79,7 +79,7 @@
         padding-top: 2rem;
 
         a {
-            font-size: 1.8rem;
+            font-size: 18px;
             transition: all 300ms ease;
 
             &:hover {
@@ -242,7 +242,7 @@
 
         a,
         p {
-            font-size: 1.4rem;
+            font-size: 14px;
             color: #5c596a;
         }
     }
@@ -343,6 +343,12 @@
                 width: 32%;
             }
         }
+        &__footer-block {
+            flex-wrap: wrap;
+            & p {
+            width: 100%;
+            }
+        }
     }
 }
 
@@ -370,6 +376,14 @@
 
         &__footer-block {
             align-items: baseline;
+            flex-wrap: wrap;
+            // border-top: 1px solid #c2c2c2;
+            & p {
+                margin-bottom: 4rem;
+            }
+            & a {
+                width: 45%;
+            }
         }
 
         &__main {
@@ -379,13 +393,24 @@
         &__main-mobile {
             display: flex;
             flex-direction: column;
-            border-bottom: 1px solid #c2c2c2;
+            // border-bottom: 1px solid #c2c2c2;
             min-height:65vh;
+            & a {
+                font-size: 14px;
+                margin-bottom: 2rem;
+            }
+            &-location {
+                background: #fff;
+                margin: 0 -2rem;
+                padding: 4rem 1rem;
+            }
         }
 
         &__footer {
-            height: 5rem;
-            margin: 0 0;
+            border-top: 1px solid #c2c2c2;
+            height: 15rem;
+            padding-bottom: 11rem;
+            padding-top: 11rem;
         }
     }
 }
@@ -394,6 +419,7 @@
     text-decoration: underline;
     color: rgb(7, 196, 127);
     cursor: pointer;
+    font-weight: bold;
 }
 
 .mobile {
