--- a/styles/main.css
+++ b/styles/main.css
@@ -1333,6 +1333,9 @@ input {
     display: none;
   }
   .header__icons-buttons {
+    min-width: 30rem;
+  }
+  .header__icons-buttons.open {
     max-width: 30rem;
   }
   .header__top {
@@ -7017,7 +7020,7 @@ input {
 }
 
 .nav-modal__main-nav a {
-  font-size: 1.8rem;
+  font-size: 18px;
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
 }
@@ -7267,7 +7270,7 @@ input {
 
 .nav-modal__footer-block a,
 .nav-modal__footer-block p {
-  font-size: 1.4rem;
+  font-size: 14px;
   color: #5c596a;
 }
 
@@ -7382,6 +7385,13 @@ input {
   .nav-modal__information div {
     width: 32%;
   }
+  .nav-modal__footer-block {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .nav-modal__footer-block p {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -7417,6 +7427,14 @@ input {
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .nav-modal__footer-block p {
+    margin-bottom: 4rem;
+  }
+  .nav-modal__footer-block a {
+    width: 45%;
   }
   .nav-modal__main {
     display: none;
@@ -7429,12 +7447,22 @@ input {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    border-bottom: 1px solid #c2c2c2;
     min-height: 65vh;
   }
+  .nav-modal__main-mobile a {
+    font-size: 14px;
+    margin-bottom: 2rem;
+  }
+  .nav-modal__main-mobile-location {
+    background: #fff;
+    margin: 0 -2rem;
+    padding: 4rem 1rem;
+  }
   .nav-modal__footer {
-    height: 5rem;
-    margin: 0 0;
+    border-top: 1px solid #c2c2c2;
+    height: 15rem;
+    padding-bottom: 11rem;
+    padding-top: 11rem;
   }
 }
 
@@ -7442,6 +7470,7 @@ input {
   text-decoration: underline;
   color: #07c47f;
   cursor: pointer;
+  font-weight: bold;
 }
 
 .mobile {
