--- a/styles/components/_search.scss
+++ b/styles/components/_search.scss
@@ -2,7 +2,7 @@
   position: relative;
   &__icon {
     position: absolute;
-    top:29%;
+    top:13px;
     left: 2%;
     cursor: pointer;
     stroke:#5c596a;
@@ -45,6 +45,7 @@
 @media screen and(max-width:1100px) {
   .search {
     &__icon {
+      display: none;
       top: 23%;
       left: 1%;
     }
