--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -144,7 +144,18 @@
   &__slider-btn {
     color: #fff;
   }
+  &__num-current {
+    font-size: 50px;
+  }
+  .swiper-pagination-custom {
+    bottom: 7%;
+    left: 32%;
+    width: max-content;
+    font-size: 30px;
+    color: white;
+    }
 }
+
 
 @media screen and (max-width: 1100px) {
   .banner {
@@ -223,6 +234,7 @@
     }
   }
 }
+
 
 @media screen and (max-width:480px) {
 
