--- a/styles/main.css
+++ b/styles/main.css
@@ -1516,6 +1516,20 @@ input {
   color: #fff;
 }
 
+.banner__num-current {
+  font-size: 50px;
+}
+
+.banner .swiper-pagination-custom {
+  bottom: 7%;
+  left: 32%;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  font-size: 30px;
+  color: white;
+}
+
 @media screen and (max-width: 1100px) {
   .banner {
     min-height: 50rem;
