--- a/styles/main.css
+++ b/styles/main.css
@@ -3183,8 +3183,13 @@ input {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 35%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   gap: 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .brand-description-card__manufacturer {
@@ -3192,6 +3197,10 @@ input {
   background-color: #cfcfcf;
   padding: 0.5rem 1rem;
   border-radius: 2rem;
+  word-break: break-word;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 50%;
+          flex: 1 0 50%;
 }
 
 .brand-description-card__country {
@@ -3199,6 +3208,7 @@ input {
   padding: 0.5rem 1rem;
   border-radius: 2rem;
   border: 1px solid #cfcfcf;
+  word-break: break-word;
 }
 
 .swiper-card__products {
