fix: size modal windows

--- a/styles/components/_feedback.scss
+++ b/styles/components/_feedback.scss
@@ -1,7 +1,7 @@
 .feedback {
     background: linear-gradient(270deg, #134574, #10ae73);
     width: 100%;
-    height: 100vh;
+    height: 100%;
     transform: translateX(-3000px);
     position: fixed;
     bottom: 0;
