--- a/styles/components/_barand-description-card.scss
+++ b/styles/components/_barand-description-card.scss
@@ -13,6 +13,9 @@
         border-radius: 2rem;
         word-break: break-word;
         flex: 1 0 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     &__country {
@@ -21,5 +24,8 @@
         border-radius: 2rem;
         border: 1px solid rgb(207, 207, 207);
         word-break: break-word;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
