--- a/styles/components/_cards-block.scss
+++ b/styles/components/_cards-block.scss
@@ -258,7 +258,7 @@
   .cards-block {
     &__header {
       grid-template-columns: 25% 60%;
-      gap: 2rem;
+      gap: 0;
     }
 
     &__grid-list {
@@ -270,7 +270,7 @@
     }
 
     &__main {
-      grid-template-columns: 0.75fr;
+      grid-template-columns: 0.8fr;
 
       & .main-btn {
         width: 130px;
