add: delivery page

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -127,7 +127,12 @@
 // checkout page
 
 @import "../styles/components/checkout";
+
 // order page
 
 @import "../styles/components/order";
 @import "../styles/components/order-point";
+
+// delivery page
+
+@import "../styles/components/delivery";
