--- a/styles/main.css
+++ b/styles/main.css
@@ -11026,4 +11026,104 @@ input {
   font-size: 18px;
   font-weight: bold;
 }
+
+.paysystem__nav {
+  margin: 3rem 0;
+}
+
+.paysystem__title {
+  font-size: 34px;
+  font-weight: bold;
+  margin-bottom: 3rem;
+  line-height: 4rem;
+}
+
+.paysystem__list {
+  margin-left: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 2rem;
+  margin-bottom: 3rem;
+}
+
+.paysystem__list-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+  margin: 3rem 0;
+}
+
+.paysystem__list-card .paysystem__item {
+  font-weight: normal;
+}
+
+.paysystem__list-card .paysystem__item--underline {
+  font-weight: normal;
+  text-decoration: underline;
+}
+
+.paysystem__list-card .paysystem__item {
+  list-style-type: disc;
+}
+
+.paysystem__item {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.paysystem__text {
+  font-weight: normal;
+  font-size: medium;
+  margin-top: 1rem;
+  line-height: 3rem;
+}
+
+.paysystem__text--italic {
+  font-style: italic;
+}
+
+.paysystem__table {
+  border-spacing: 20px;
+  margin-bottom: 3rem;
+}
+
+.paysystem__table-title {
+  font-weight: bold;
+  text-align: left;
+}
+
+.paysystem__body {
+  padding: 0;
+}
+
+@media screen and (max-width: 480px) {
+  .paysystem__title {
+    font-size: 26px;
+    line-height: 6rem;
+  }
+  .paysystem__item {
+    line-height: 4rem;
+  }
+  .paysystem__text {
+    line-height: 5rem;
+    font-size: 14px;
+  }
+  .paysystem__table {
+    border-spacing: 5px;
+    font-size: 12px;
+  }
+  .paysystem__list-card .paysystem__item {
+    font-size: 14px;
+  }
+}
 /*# sourceMappingURL=main.css.map */
