--- a/styles/components/_about.scss
+++ b/styles/components/_about.scss
@@ -1,9 +1,9 @@
 .about {
     &__nav {
-        width: 20rem;
         margin: 3rem 0;
         display: flex;
-        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 5px;
         &-link, &-slash {
             font-size: 14px;
             color: #5C596A;
@@ -113,9 +113,6 @@
 
 @media screen and(max-width:1100px) {
     .about {
-        &__nav {
-            width: 30rem;
-        }
         &__aside {
             display: none;
         }
@@ -154,7 +151,6 @@
 @media screen and(max-width:480px) {
     .about {
         &__nav {
-            width: 32rem;
             &-link, &-slash {
                 font-size: 12px;
             }
