--- a/styles/components/_article-inside.scss
+++ b/styles/components/_article-inside.scss
@@ -7,14 +7,12 @@
     &__nav {
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        width: 323px;
+        flex-wrap: wrap;
+        gap: 5px;
         font-size: 14px;
         color: #5C596A;
-        // min-height: 6rem;
         margin-top: 3rem;
         margin-bottom: 3.5rem;
-        min-width: 0;
 
         &-link,
         &-link-home,
@@ -250,8 +248,6 @@
         &__nav {
             display: flex;
             min-height: 6rem;
-            width: 80%;
-            justify-content: space-between;
             margin-top: 3rem;
 
             &-link,
