--- a/styles/components/_articles-all.scss
+++ b/styles/components/_articles-all.scss
@@ -2,10 +2,8 @@
     &__nav {
         display: flex;
         margin-top: 26px;
-        width: 170px;
-        min-width: 0;
-        justify-content: space-between;
-
+        flex-wrap: wrap;
+        gap: 5px;
         &-link,
         &-link-home,
         &-slach {
@@ -140,8 +138,6 @@
 
     .articles-all {
         &__nav {
-            width: 132px;
-
             &-link,
             &-link-home,
             &-slach {
