--- a/styles/components/_catalog-main.scss
+++ b/styles/components/_catalog-main.scss
@@ -2,7 +2,8 @@
       &__nav {
             display: flex;
             min-height: 6rem;
-            width: 50%;
+            flex-wrap: wrap;
+            gap: 5px;
       }
 
       &__header {
@@ -76,9 +77,7 @@
       }
 }
 
-.catalog .card__nav {
-      width: 175px;
-}
+
 
 @media screen and(max-width:1100px) {
       .catalog {
@@ -94,10 +93,7 @@
             }
       }
 
-      .catalog .card__nav {
-            width: 147px;
-            min-width: 0;
-      }
+
 }
 
 @media screen and(max-width:480px) {
@@ -117,8 +113,4 @@
             }
       }
 
-      .catalog .card__nav {
-            width: 147px;
-            min-width: 0;
-      }
 }
