--- a/styles/components/_directions.scss
+++ b/styles/components/_directions.scss
@@ -1,11 +1,10 @@
 .directions {
     &__nav {
         display: flex;
-        justify-content: space-between;
         align-items: center;
-        width: 213px;
         margin: 30px 0;
-        min-width: 0;
+        flex-wrap: wrap;
+        gap: 5px;
     }
 
     &__title {
@@ -82,9 +81,6 @@
 
 @media screen and(max-width: 480px) {
     .directions {
-        &__nav {
-            width: 170px;
-        }
 
         &__title {
             font-size: 26px;
