--- a/styles/components/_reviews-all.scss
+++ b/styles/components/_reviews-all.scss
@@ -60,11 +60,10 @@
 
     &__nav {
         display: flex;
-        justify-content: space-between;
         align-items: center;
-        width: 176px;
         margin: 30px 0;
-        min-width: 0;
+        flex-wrap: wrap;
+        gap: 5px;
     }
 
     &__footer {
@@ -95,9 +94,6 @@
 
 @media screen and(max-width:480px) {
     .reviews-all {
-        &__nav {
-            width: 138px;
-        }
         &__title {
             font-size: 26px;
         }
