fix: border checked, size img

--- a/styles/components/_swiper-card-prod.scss
+++ b/styles/components/_swiper-card-prod.scss
@@ -65,6 +65,8 @@
     width: 100%;
     border: 1px solid rgb(207, 207, 207);
     border-radius: 0.5rem;
+    object-fit: contain;
+    min-height: 300px;
   }
 
 
