--- a/styles/components/_card-prod.scss
+++ b/styles/components/_card-prod.scss
@@ -32,6 +32,9 @@
   }
 
   &__block-foto {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     grid-area: foto;
     width: 550px;
   }
@@ -39,12 +42,27 @@
   &__foto {
     margin-bottom: 3rem;
     width: 100%;
-    border: 1px solid rgb(207, 207, 207);
+    // border: 1px solid rgb(207, 207, 207);
+  }
+
+  &__block-foto-mini::-webkit-scrollbar { 
+    height: 6px;
+  } 
+  &__block-foto-mini::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  } 
+  &__block-foto-mini::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
   }
 
   &__block-foto-mini {
-    display: grid;
-    grid-template-columns: repeat(3, 70px);
+    display: flex;
+    overflow-y: auto;
+    padding-bottom: 3rem;
+    scrollbar-color: rgba(79, 79, 79, 0.4) rgba(193, 193, 193, 0.4);;
+    scrollbar-width: thin;
+    // display: grid;
+    // grid-template-columns: repeat(3, 70px);
     gap: 20px;
 
     & input[type="radio"] {
@@ -54,13 +72,14 @@
 
   &__foto-tab :checked+.card__foto-radio {
     position: relative;
-    padding-bottom: 58px;
+    padding-bottom: 90px;
     border-bottom: 4px solid rgb(7, 196, 127);
     z-index: 10;
   }
 
   &__foto-mini {
     cursor: pointer;
+    border: 1px solid rgb(207, 207, 207);
     transition: transform 1s ease;
 
     &:hover {
@@ -164,7 +183,7 @@
     padding-top: 3rem;
 
     & input[type='radio']:checked + label {
-      padding-bottom: 0.8rem;
+      padding-bottom: 2.5rem;
       border-bottom: 3.5px solid rgb(7, 196, 127)
     }
     .input-card-1:checked ~ .card-1 {
