--- a/styles/main.css
+++ b/styles/main.css
@@ -3345,6 +3345,9 @@ input {
   width: 100%;
   border: 1px solid #cfcfcf;
   border-radius: 0.5rem;
+  -o-object-fit: contain;
+     object-fit: contain;
+  min-height: 300px;
 }
 
 .swiper-card__description {
@@ -3439,6 +3442,16 @@ input {
 }
 
 .card__block-foto {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -ms-grid-row: 1;
   -ms-grid-row-span: 4;
   -ms-grid-column: 1;
@@ -3449,14 +3462,30 @@ input {
 .card__foto {
   margin-bottom: 3rem;
   width: 100%;
-  border: 1px solid #cfcfcf;
+}
+
+.card__block-foto-mini::-webkit-scrollbar {
+  height: 6px;
+}
+
+.card__block-foto-mini::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.card__block-foto-mini::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 .card__block-foto-mini {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (70px)[3];
-      grid-template-columns: repeat(3, 70px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow-y: auto;
+  padding-bottom: 3rem;
+  scrollbar-color: rgba(79, 79, 79, 0.4) rgba(193, 193, 193, 0.4);
+  scrollbar-width: thin;
   gap: 20px;
 }
 
@@ -3466,13 +3495,14 @@ input {
 
 .card__foto-tab :checked + .card__foto-radio {
   position: relative;
-  padding-bottom: 58px;
+  padding-bottom: 90px;
   border-bottom: 4px solid #07c47f;
   z-index: 10;
 }
 
 .card__foto-mini {
   cursor: pointer;
+  border: 1px solid #cfcfcf;
   -webkit-transition: -webkit-transform 1s ease;
   transition: -webkit-transform 1s ease;
   transition: transform 1s ease;
@@ -3618,7 +3648,7 @@ input {
 }
 
 .card__footer input[type='radio']:checked + label {
-  padding-bottom: 0.8rem;
+  padding-bottom: 2.5rem;
   border-bottom: 3.5px solid #07c47f;
 }
 
