--- a/styles/components/_card-prod.scss
+++ b/styles/components/_card-prod.scss
@@ -42,7 +42,9 @@
   &__foto {
     margin-bottom: 3rem;
     width: 100%;
-    // border: 1px solid rgb(207, 207, 207);
+    border: 1px solid rgb(207, 207, 207);
+    height: 600px;
+    object-fit: contain;
   }
 
   &__block-foto-mini::-webkit-scrollbar { 
@@ -57,12 +59,10 @@
 
   &__block-foto-mini {
     display: flex;
-    overflow-y: auto;
-    padding-bottom: 3rem;
+    overflow-x: auto;
+    height: 100%;
     scrollbar-color: rgba(79, 79, 79, 0.4) rgba(193, 193, 193, 0.4);;
     scrollbar-width: thin;
-    // display: grid;
-    // grid-template-columns: repeat(3, 70px);
     gap: 20px;
 
     & input[type="radio"] {
