--- a/styles/components/_swiper-card-prod.scss
+++ b/styles/components/_swiper-card-prod.scss
@@ -93,6 +93,13 @@
 
 }
 
+@media screen and (max-width: 1100px) {
+  .swiper-card {
+    &__img {
+      min-height: auto;
+    }
+  }
+}
 @media screen and (max-width: 480px) {
   .swiper-card {
     &__products {
@@ -111,6 +118,7 @@
     &__img {
       width: 100%;
       height: 100%;
+      min-height: auto;
 
       &-block {
         width: 115px;
