--- a/styles/main.css
+++ b/styles/main.css
@@ -3372,6 +3372,12 @@ input {
   transition: all 0.5s ease 0s;
 }
 
+@media screen and (max-width: 1100px) {
+  .swiper-card__img {
+    min-height: auto;
+  }
+}
+
 @media screen and (max-width: 480px) {
   .swiper-card__products {
     -ms-grid-columns: 1fr;
@@ -3385,6 +3391,7 @@ input {
   .swiper-card__img {
     width: 100%;
     height: 100%;
+    min-height: auto;
   }
   .swiper-card__img-block {
     width: 115px;
@@ -3462,6 +3469,10 @@ input {
 .card__foto {
   margin-bottom: 3rem;
   width: 100%;
+  border: 1px solid #cfcfcf;
+  height: 600px;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .card__block-foto-mini::-webkit-scrollbar {
@@ -3482,8 +3493,8 @@ input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  overflow-y: auto;
-  padding-bottom: 3rem;
+  overflow-x: auto;
+  height: 100%;
   scrollbar-color: rgba(79, 79, 79, 0.4) rgba(193, 193, 193, 0.4);
   scrollbar-width: thin;
   gap: 20px;
