fix: size photo-block

--- a/styles/components/_card-prod.scss
+++ b/styles/components/_card-prod.scss
@@ -42,7 +42,7 @@
   &__foto {
     margin-bottom: 3rem;
     width: 100%;
-    border: 1px solid rgb(207, 207, 207);
+    // border: 1px solid rgb(207, 207, 207);
     height: 600px;
     object-fit: contain;
   }
@@ -60,7 +60,8 @@
   &__block-foto-mini {
     display: flex;
     overflow-x: auto;
-    height: 100%;
+    overflow-y: hidden;
+    // height: 100%;
     scrollbar-color: rgba(79, 79, 79, 0.4) rgba(193, 193, 193, 0.4);;
     scrollbar-width: thin;
     gap: 20px;
