--- a/styles/components/_card-prod.scss
+++ b/styles/components/_card-prod.scss
@@ -39,16 +39,17 @@
     width: 550px;
   }
 
+  &__foto-main {
+    height: 550px;
+  }
+
   &__foto {
-    margin-bottom: 3rem;
     width: 100%;
-    // border: 1px solid rgb(207, 207, 207);
-    height: 600px;
-    object-fit: contain;
   }
 
   &__block-foto-mini::-webkit-scrollbar { 
-    height: 6px;
+    //height: 6px;
+    display: none;
   } 
   &__block-foto-mini::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -58,13 +59,16 @@
   }
 
   &__block-foto-mini {
+    
     display: flex;
     overflow-x: auto;
     overflow-y: hidden;
     // height: 100%;
-    scrollbar-color: rgba(79, 79, 79, 0.4) rgba(193, 193, 193, 0.4);;
+    scrollbar-color: rgba(79, 79, 79, 0.4) rgba(193, 193, 193, 0.4);
     scrollbar-width: thin;
     gap: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgba(193, 193, 193, 0.4);
 
     & input[type="radio"] {
       display: none;
@@ -73,9 +77,10 @@
 
   &__foto-tab :checked+.card__foto-radio {
     position: relative;
-    padding-bottom: 90px;
+    padding-bottom: 74.5px;
+  
     border-bottom: 4px solid rgb(7, 196, 127);
-    z-index: 10;
+    z-index: 100;
   }
 
   &__foto-mini {
@@ -252,7 +257,7 @@
     }
 
     &__header-title {
-      width: 630px;
+      //width: 630px;
     }
 
     &__header-description {
@@ -262,7 +267,7 @@
     }
 
     &__block-foto {
-      width: 720px;
+     // width: 95vw;
     }
 
     &__main-description {
@@ -300,6 +305,10 @@
     &__footer-description {
       min-height: 20rem;
     }
+    &__footer-text{
+      line-height: 4rem;
+      margin: 10px 0;
+    }
   }
 }
 
@@ -307,15 +316,23 @@
   .card {
     &__header {
       min-height: 10rem;
+   
 
       &-title {
         font-size: 20px;
-        width: 350px;
+        width: 95vw;
       }
     }
 
     &__block-foto {
-      width: 350px;
+      min-height: 100%;
+    }
+
+    &__foto-main {
+      width: 95vw;
+      height: 300px;
+   
+      
     }
 
     &__nav-link,
@@ -338,7 +355,7 @@
     }
 
     &__main-selects-block {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(1, 1fr);
       gap: 1rem;
     }
 
@@ -346,6 +363,7 @@
       gap: 1rem;
       min-height: 3rem;
       margin-bottom: 1.5rem;
+    
 
       & select {
         font-size: 14px;
@@ -367,6 +385,7 @@
 
     &__main-description {
       min-height: 40rem;
+      width: 95vw;
     }
 
     &__footer {
@@ -376,6 +395,7 @@
     }
     &__footer-description {
       min-height: 20rem;
+      width: 95vw;
     }
     &__footer-text-block {
       display: none;
@@ -383,6 +403,11 @@
 
     &__footer-lincks-block {
       display: none;
+    }
+
+    &__footer-text{
+      line-height: 4rem;
+      margin: 10px 0;
     }
   }
 }
