--- a/styles/main.css
+++ b/styles/main.css
@@ -3466,16 +3466,16 @@ input {
   width: 550px;
 }
 
+.card__foto-main {
+  height: 550px;
+}
+
 .card__foto {
-  margin-bottom: 3rem;
   width: 100%;
-  height: 600px;
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 
 .card__block-foto-mini::-webkit-scrollbar {
-  height: 6px;
+  display: none;
 }
 
 .card__block-foto-mini::-webkit-scrollbar-track {
@@ -3497,6 +3497,8 @@ input {
   scrollbar-color: rgba(79, 79, 79, 0.4) rgba(193, 193, 193, 0.4);
   scrollbar-width: thin;
   gap: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgba(193, 193, 193, 0.4);
 }
 
 .card__block-foto-mini input[type="radio"] {
@@ -3505,9 +3507,9 @@ input {
 
 .card__foto-tab :checked + .card__foto-radio {
   position: relative;
-  padding-bottom: 90px;
+  padding-bottom: 74.5px;
   border-bottom: 4px solid #07c47f;
-  z-index: 10;
+  z-index: 100;
 }
 
 .card__foto-mini {
@@ -3720,17 +3722,11 @@ input {
   .card__main {
         grid-template-areas: "description description" "foto foto" "foto foto" "main main" "calculation calculation";
   }
-  .card__header-title {
-    width: 630px;
-  }
   .card__header-description {
     -ms-flex-pack: distribute;
         justify-content: space-around;
     min-height: 18rem;
     border-bottom: none;
-  }
-  .card__block-foto {
-    width: 720px;
   }
   .card__main-description {
     min-height: 20rem;
@@ -3769,6 +3765,10 @@ input {
   .card__footer-description {
     min-height: 20rem;
   }
+  .card__footer-text {
+    line-height: 4rem;
+    margin: 10px 0;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -3777,10 +3777,14 @@ input {
   }
   .card__header-title {
     font-size: 20px;
-    width: 350px;
+    width: 95vw;
   }
   .card__block-foto {
-    width: 350px;
+    min-height: 100%;
+  }
+  .card__foto-main {
+    width: 95vw;
+    height: 300px;
   }
   .card__nav-link, .card__nav-slach {
     font-size: 12px;
@@ -3797,8 +3801,8 @@ input {
     font-size: 14px;
   }
   .card__main-selects-block {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
     gap: 1rem;
   }
   .card__select-container {
@@ -3821,18 +3825,24 @@ input {
   }
   .card__main-description {
     min-height: 40rem;
+    width: 95vw;
   }
   .card__footer label, .card__footer section {
     display: none;
   }
   .card__footer-description {
     min-height: 20rem;
+    width: 95vw;
   }
   .card__footer-text-block {
     display: none;
   }
   .card__footer-lincks-block {
     display: none;
+  }
+  .card__footer-text {
+    line-height: 4rem;
+    margin: 10px 0;
   }
 }
 
