refactor:I removed the tab indicator on the mini photo and added a green scroll for the photo

--- a/styles/main.css
+++ b/styles/main.css
@@ -3475,7 +3475,7 @@ input {
 }
 
 .card__block-foto-mini::-webkit-scrollbar {
-  display: none;
+  height: 4px;
 }
 
 .card__block-foto-mini::-webkit-scrollbar-track {
@@ -3484,8 +3484,8 @@ input {
 }
 
 .card__block-foto-mini::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 6px #07c47f;
+          box-shadow: inset 0 0 6px #07c47f;
 }
 
 .card__block-foto-mini {
@@ -3497,19 +3497,12 @@ input {
   scrollbar-color: rgba(79, 79, 79, 0.4) rgba(193, 193, 193, 0.4);
   scrollbar-width: thin;
   gap: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 21px;
   border-bottom: 1px solid rgba(193, 193, 193, 0.4);
 }
 
 .card__block-foto-mini input[type="radio"] {
   display: none;
-}
-
-.card__foto-tab :checked + .card__foto-radio {
-  position: relative;
-  padding-bottom: 74.5px;
-  border-bottom: 4px solid #07c47f;
-  z-index: 100;
 }
 
 .card__foto-mini {
@@ -3523,6 +3516,7 @@ input {
 
 .card__foto-mini:hover {
   opacity: 0.6;
+  border: 1px solid #07c47f;
   -webkit-box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
           box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
 }
