--- a/styles/components/_card-prod.scss
+++ b/styles/components/_card-prod.scss
@@ -48,14 +48,14 @@
   }
 
   &__block-foto-mini::-webkit-scrollbar { 
-    //height: 6px;
-    display: none;
+    height: 4px;
+    //display: none;
   } 
   &__block-foto-mini::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
   } 
   &__block-foto-mini::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 6px rgb(7, 196, 127);
   }
 
   &__block-foto-mini {
@@ -67,7 +67,7 @@
     scrollbar-color: rgba(79, 79, 79, 0.4) rgba(193, 193, 193, 0.4);
     scrollbar-width: thin;
     gap: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 21px;
     border-bottom: 1px solid rgba(193, 193, 193, 0.4);
 
     & input[type="radio"] {
@@ -76,11 +76,11 @@
   }
 
   &__foto-tab :checked+.card__foto-radio {
-    position: relative;
-    padding-bottom: 74.5px;
+    // position: relative;
+    // padding-bottom: 74.5px;
   
-    border-bottom: 4px solid rgb(7, 196, 127);
-    z-index: 100;
+    // border-bottom: 4px solid rgb(7, 196, 127);
+    // z-index: 100;
   }
 
   &__foto-mini {
@@ -90,6 +90,7 @@
 
     &:hover {
       opacity: 0.6;
+      border: 1px solid rgb(7, 196, 127);
       box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
     }
   }
